--- a/viewer/vueapp/src/overrides.css
+++ b/viewer/vueapp/src/overrides.css
@@ -30,13 +30,6 @@ textarea.form-control:focus {
 }
 
 
-/* themed native selects --------------------------------------------------- */
-select.custom-select {
-  color: var(--color-primary);
-  border-color: var(--color-primary);
-  background-color: var(--color-background);
-}
-
 /* themed input groups ----------------------------------------------------- */
 .input-group-prepend > .input-group-text,
 .input-group-append:not(.color) > .input-group-text {
@@ -44,7 +37,6 @@ select.custom-select {
   color: var(--color-foreground, #555) !important;
   background-color: var(--color-background, #EEE) !important;
 }
-
 
 
 /* give error text theme color --------------------------------------------- */
